@@ -10,6 +10,9 @@ version 0.46:
 	* Ability to stop animation on buddy icons, hide certain
 	  buddy icons, and save people's buddy icons, all through
 	  a right-click menu
+	* Event handlers in perl passed arguments as elements of
+	  an array rather than all concatenated as a string, making
+	  perl much easier to use (thanks Dennis Lambe Jr.)
 
 version 0.45 (10/04/2001):
 	* New plugin event: event_chat_send_invite
